tests/test-files/parse-fn.txt
================================================================================
100 Malformed function
================================================================================

(package test-package)

(define f (fn))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:13
   |
 3 |  (define f (fn))
   |               ^ expected function arguments

================================================================================
101 Malformed function
================================================================================

(package test-package)

(define f (fn ()))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:16
   |
 3 |  (define f (fn ()))
   |                  ^ expected function body

================================================================================
102 Malformed function
================================================================================

(package test-package)

(define f (fn x 1))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:14
   |
 3 |  (define f (fn x 1))
   |                ^ malformed argument list
help: add parentheses
 3 | (define f (fn (x) 1))
   |               ---

================================================================================
20 Function with keyword parameters
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define f-parse20
  (fn (x &key (offset 1))
    (+ x offset)))

================================================================================
21 Function with empty keyword marker
================================================================================

(package coalton-unit-tests)

(define f-parse21
  (fn (x &key)
    x))

================================================================================
22 Function with transparent return modifier
================================================================================

(package coalton-unit-tests)

(define f-parse22
  (fn :transparent-to-return (x)
    x))
